manifests/apps/immich/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: immich
  name: immich
